fixed small problem with dark mode with sponsor

--- a/frontend/styles/Home.module.css
+++ b/frontend/styles/Home.module.css
@@ -531,7 +531,7 @@ div .headline {
 }
 
 .lightmodeBanner {
-  display:unset;
+  display:block;
 }
 
 @media (prefers-color-scheme:dark) {
@@ -540,7 +540,7 @@ div .headline {
   }
 
   .darkmodeBanner {
-    display: unset;
+    display: block;
   }
 }
 
